--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
   provider: ^6.1.4
+  dio: ^5.8.0+1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
